--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 
       <div class="footer">
         <span>© <span id="y"></span> Mulhima Group</span>
-        <span><a href="mailto:info@mulhima.co">info@mulhima.co</a></span>
+        <span><a href="mailto:info@mulhima.co">info@mulhima.com</a></span>
       </div>
     </aside>
   </main>
