--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <!-- نموذج مجاني عبر Formspree (اختياري) -->
         <!-- 1) أنشئ فورم في https://formspree.io
              2) استبدل XXXXXXX بالـ ID الخاص بك -->
-        <form class="contact" action="https://formspree.io/f/XXXXXXX" method="POST">
+        <form class="contact" action="https://formspree.io/f/mojwbvkg" method="POST">
           <div class="field">
             <label for="email">البريد الإلكتروني</label>
             <input id="email" name="email" type="email" placeholder="name@email.com" required>
