--- a/index.html
+++ b/index.html
@@ -284,10 +284,21 @@
     a:hover{color:#fff}
 
     /* Responsive */
-    @media (max-width: 860px){
-      .wrap{grid-template-columns: 1fr;}
-      .left{min-height:auto}
-    }
+@media (max-width: 860px){
+  body{
+    align-items: flex-start;
+  }
+
+  .wrap{
+    grid-template-columns: 1fr;
+    margin-top: 32px;
+  }
+
+  .left{
+    min-height: auto;
+  }
+}
+
 
     /* Reduce motion */
     @media (prefers-reduced-motion: reduce){
@@ -307,7 +318,7 @@
         <img class="logo" src="logo.png" alt="Mulhima Logo">
         <div class="brandTitle">
           <strong>Mulhima Group</strong>
-          <span>Creative Agency</span>
+          <span>A Fully Integrated Creative Group</span>
         </div>
       </div>
 
@@ -319,9 +330,13 @@
 
       <div class="chips" aria-label="خدمات">
         <div class="chip">Brand Identity</div>
+        <div class="chip">Brand Strategy</div>
         <div class="chip">UI/UX</div>
         <div class="chip">Content & Social</div>
         <div class="chip">Digital Marketing</div>
+        <div class="chip">Creative Campaigns</div>
+        <div class="chip">Advertising Concepts</div>
+        <div class="chip">Web Design & Development</div>
       </div>
     </section>
 
