--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</div>
 </div>
 <div id="Content" class="wrapper"> 
-<div class="countdown styled"></div> 
+<div class="countdown styled">30</div> 
 <h2 class="intro">Our website is under construction. Stay tuned for something amazing!. Subscribe to be notified.</h2>
 <div id="subscribe"> 
 	<form action="" method="post" onsubmit="">
