--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold"> 
 <link rel="stylesheet" type="text/css" href="css/styles.css">
+<link rel="icon" type="image/x-icon" href="ICON.ico">
 </head>
 
 <body id="home">
 <div id="Header">
 <div class="wrapper">
-	<h1>MULHIMA</h1>	
+	<h1><img src="logo.png" alt="MULHIMA"></h1>	
 	</div>
 </div>
 <div id="Content" class="wrapper"> 
@@ -28,12 +29,10 @@
 		<input type="button" value="Submit"/></p>
 	</form>
 	<div id="socialIcons">
-		<ul> 
-			<li><a href="" title="Twitter" class="twitterIcon"></a></li>
-			<li><a href="" title="facebook" class="facebookIcon"></a></li>
-			<li><a href="" title="linkedIn" class="linkedInIcon"></a></li>
-			<li><a href="" title="Pintrest" class="pintrestIcon"></a></li>
-		</ul>
+	<ul>
+		<li><a href="https://twitter.com/MULHIMA_GROUP" title="Twitter" class="twitterIcon" target="_blank" rel="noopener"></a></li>
+		<li><a href="https://instagram.com/MULHIMA_GROUP" title="Instagram" class="instagramIcon" target="_blank" rel="noopener"></a></li>
+	</ul>
 	</div>
 </div>
 <span class="tempBy">creatived by: <a href="http://mulhima.net" alt="MULHIMA">MULHIMA.NET</a></span>
