--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
 	<h1><img src="logo.png" alt="MULHIMA"></h1>	
 	</div>
 </div>
-<div id="Content" class="wrapper"> 
-<div class="countdown styled"></div> 
+<div id="Content" class="wrapper">
+
+  <div class="siteLogo">
+    <img src="logo.png" alt="MULHIMA">
+  </div>
+
+  <div class="countdown styled"></div> 
 <h2 class="intro">Our website is under construction. Stay tuned for something amazing!. Subscribe to be notified.</h2>
 <div id="subscribe"> 
 	<form action="" method="post" onsubmit="">
