--- a/index.html
+++ b/index.html
@@ -32,7 +32,21 @@
 	<form action="" method="post" onsubmit="">
 		<p><input name="" value="Enter your e-mail" type="text" id=""/>
 		<input type="button" value="Submit"/></p>
-	</form>
+	<form
+  action="https://docs.google.com/forms/d/e/1FAIpQLSdDIFN57s8IKF0goLPaNAX7ImvousLCNClHznhiW58nm268og/formResponse"
+  method="POST"
+  target="_blank">
+
+  <p>
+    <input
+      type="email"
+      name="entry.2006348323"
+      placeholder="Enter your e-mail"
+      required>
+
+    <input type="submit" value="Submit">
+  </p>
+</form>
 	<div id="socialIcons">
 	<ul>
 		<li><a href="https://twitter.com/MULHIMA_GROUP" title="Twitter" class="twitterIcon" target="_blank" rel="noopener"></a></li>
