--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
 	<form action="" method="post" onsubmit="">
 		<p><input name="" value="Enter your e-mail" type="text" id=""/>
 		<input type="button" value="Submit"/></p>
-	<form
+	<form id="subscribeForm"
   action="https://docs.google.com/forms/d/e/1FAIpQLSdDIFN57s8IKF0goLPaNAX7ImvousLCNClHznhiW58nm268og/formResponse"
-  method="POST"
-  target="_blank">
+  method="POST">
 
   <p>
     <input
@@ -47,6 +46,10 @@
     <input type="submit" value="Submit">
   </p>
 	</form>
+
+	<p id="subscribeMsg" style="display:none; text-align:center; margin-top:10px;">
+  		✅ Thanks! You’re subscribed.
+	</p>
 	<div id="socialIcons">
 	<ul>
 		<li><a href="https://twitter.com/MULHIMA_GROUP" title="Twitter" class="twitterIcon" target="_blank" rel="noopener"></a></li>
