--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <body id="home">
 <div id="Header">
-<div class="wrapper">
-	<h1></h1>
-	</div>
+  <div class="wrapper">
+    <!-- header hidden -->
+  </div>
 </div>
 <div id="Content" class="wrapper">
 	
