--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold"> 
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 <link rel="icon" type="image/x-icon" href="ICON.ico">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body id="home">
@@ -48,12 +49,12 @@
   </p>
 
   <div id="socialIcons">
-    <ul>
-      <li><a href="https://twitter.com/MULHIMA_GROUP" title="Twitter" class="twitterIcon" target="_blank" rel="noopener"></a></li>
-      <li><a href="https://instagram.com/MULHIMA_GROUP" title="Instagram" class="instagramIcon" target="_blank" rel="noopener"></a></li>
-    </ul>
-  </div>
+  <ul>
+    <li><a href="https://twitter.com/MULHIMA_GROUP" title="Twitter" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a></li>
+    <li><a href="https://instagram.com/MULHIMA_GROUP" title="Instagram" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a></li>
+  </ul>
 </div>
+
 
 <span class="tempBy">creatived by: <a href="http://mulhima.net" alt="MULHIMA">MULHIMA.NET</a></span>
 </div>
