--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold"> 
 <link rel="stylesheet" type="text/css" href="css/styles.css">
-<link rel="icon" type="image/x-icon" href="ICON.ico">
+<link rel="icon" type="image/x-icon" href="icon.ico">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
